cluster/apps/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
  type: ClusterIP
